--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,10 +9,39 @@
 * Date: avril 2021. 
 */
 .container-entete{
+    z-index:5;
+    position: fixed;
+    
     width : 100vw;
-    height :300px;
-    background-color :green;
+    height :60px;
+    border-bottom: 2px solid $color-white;
+    //margin-bottom: 50px;
 }
 .content-entete{
+    display :flex;
+    width :100%;
+    height:95%;
+border-bottom: 1px solid $color-white;
+//padding-bottom: 5px;
+}
+.entete-left{
+    width :40%;
+    height: 100%;
+}
+
+.entete-center{
+    width:20%;
+    height: 100%;
+    padding : 10px 10px;
+    border-left :1px solid $color-white;
+    border-right :1px solid $color-white;
+    font-size :large;
+    color:$color-white;
+}
+
+.entete-right{
+width:40%;
+height: 100%;
 
 }
+
