--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,10 +11,11 @@
 
 
 /*--color--*/
-$primary:#9356DC;
-$secondary:#FF79DA;
-$tertiary:#99E2D0;
+//$primary:#9356DC;
+//$secondary:#FF79DA;
+//$tertiary:#99E2D0;
 $color-white:#ffffff;
+$color-background: #f9fafa;
 $color-grey-light:#eaeaea;
 $color-font:#f6f6f6;
 $color-grey-dark: #353535;
