--- a/sass/main-commencer.scss
+++ b/sass/main-commencer.scss
@@ -6,9 +6,5 @@
 @import "./layouts/header";
 @import "./layouts/footer";
 @import "./layouts/cards";
-@import "./layouts/map-monde";
-@import "./pages/page-home";
+@import "./pages/page-commencer";
 @import "./components/links";
-
-
-
