--- a/sass/main-tour-du-monde.scss
+++ b/sass/main-tour-du-monde.scss
@@ -7,8 +7,5 @@
 @import "./layouts/footer";
 @import "./layouts/cards";
 @import "./layouts/map-monde";
-@import "./pages/page-home";
+@import "./pages/page-tour-du-monde";
 @import "./components/links";
-
-
-
