--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -28,3 +28,10 @@
     @content;
   }
 }
+
+@mixin parallax {
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
