--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,40 +8,54 @@
 * Description : Stylesheet du header.
 * Date: avril 2021. 
 */
-.container-entete{
-    z-index:5;
-    position: fixed;
-    
-    width : 100vw;
-    height :60px;
-    border-bottom: 2px solid $color-white;
-    //margin-bottom: 50px;
+.container-entete {
+  z-index: 5;
+  position: fixed;
+  width: 100vw;
+  height: 60px;
+  border-bottom: 2px solid $color-white;
+  background-color: $color-grey-dark-light;
 }
-.content-entete{
-    display :flex;
-    width :100%;
-    height:95%;
-border-bottom: 1px solid $color-white;
-//padding-bottom: 5px;
+.content-entete {
+  display: flex;
+  width: 100%;
+  height: 95%;
+  border-bottom: 1px solid $color-white;
 }
-.entete-left{
-    width :40%;
-    height: 100%;
-}
-
-.entete-center{
-    width:20%;
-    height: 100%;
-    padding : 10px 10px;
-    border-left :1px solid $color-white;
-    border-right :1px solid $color-white;
-    font-size :large;
-    color:$color-white;
+.entete-left {
+  width: 42%;
+  height: 100%;
+  padding-left :50px;
+  display:flex;
+  align-items: center;
+  &__list {
+    & > li {
+   display:inline;
+   padding : 0 30px;
+    }
+  }
 }
 
-.entete-right{
-width:40%;
-height: 100%;
+.entete-center {
+  width: 15%;
+  height: 100%;
+  padding: 10px 10px;
+  border-left: 1px solid $color-white;
+  border-right: 1px solid $color-white;
+ display:flex;
+ justify-content: center;
+ align-items: center;
 
+  &__logo {
+    font-size: $font-mdbig;
+    //font-family: Aviator;
+    font-family: $font-logo;
+    color: $color-white;
+   
+  }
 }
 
+.entete-right {
+  width: 42%;
+  height: 100%;
+}
