--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,14 +11,17 @@
 
 
 /*--color--*/
-//$primary:#9356DC;
-//$secondary:#FF79DA;
-//$tertiary:#99E2D0;
+$primary:#9356DC;
+$secondary:#FF79DA;
+$tertiary:#99E2D0;
 $color-white:#ffffff;
 $color-background: #f9fafa;
 $color-grey-light:#eaeaea;
 $color-font:#f6f6f6;
 $color-grey-dark: #353535;
+$color-grey-dark-light :#35353560;
+$color-grey-dark-dark :#242A35;
+$color-white-opacity :#ffffff50;
 
 /*--font--*/
 $font-exsm: 1.5rem;
@@ -26,12 +29,17 @@ $font-sm: 1.6rem;
 $font-md: 1.8rem;
 $font-lg: 2.3rem;
 $font-exlg: 2.5rem;
-$font-big: 3rem;
+$font-smbig: 3rem;
+$font-mdbig :4rem;
+$font-exbig: 5rem;
 
 
 /*--font-familly--*/
 $font-title :'shrikhand';
 $font-texte :'roboto';
+$font-oblique : 'Pinyon Script';
+$font-alex :'Parisienne';
+$font-logo: 'Miss Fajardose';
 
 
 /*--media query--*/
