--- a/sass/main-home.scss
+++ b/sass/main-home.scss
@@ -9,6 +9,7 @@
 @import "./layouts/map-monde";
 @import "./pages/page-home";
 @import "./components/links";
+@import "./components/scroll-up";
 
 
 
