--- a/sass/bases/_fonts.scss
+++ b/sass/bases/_fonts.scss
@@ -12,16 +12,19 @@
 h1 {
   font-family: $font-title, sans-serif;
 }
-
 h2,
 h3,
 h4,
 p,
 span,
 a {
+  
  // font-family: $font-texte, sans-serif;
 }
 
+a{
+  cursor: pointer;
+}
 h1{
   font-size: $font-exbig;
 }
