--- a/sass/layouts/_cards.scss
+++ b/sass/layouts/_cards.scss
@@ -2,7 +2,7 @@ $width: 350px;
 
 .container-cards {
   position: relative;
-  width: $width;
+  width: 350px;
   height: calc-gold-nb($width);
  //height: 500px;
  
@@ -11,6 +11,7 @@ $width: 350px;
  
 // width: 100%;
  //height: $width;
+ width:100%;
  height : 100%;
   overflow: hidden;
   border : 1px solid black;
