--- a/sass/layouts/_map-monde.scss
+++ b/sass/layouts/_map-monde.scss
@@ -2,5 +2,10 @@
    /*  width: 100vw;
     height: 100vh; */
     width: 100%;
-    height: 50%;
+    height: 100%;
+    
+  }
+  #canvasmain{
+    width: 100%;
+    height: 100%;
   }
