--- a/sass/pages/_page-home.scss
+++ b/sass/pages/_page-home.scss
@@ -88,3 +88,9 @@ background-color:$color-grey-light;
     height:300px;
     background-color:$color-grey-dark-dark;
 }
+
+.divcanvas{
+    width:100%;
+    height :100%;
+    background-image:url(../../dist/pictures/mapmonde/stars.jpg);
+}
