--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,17 +11,19 @@
 
 
 /*--color--*/
-$primary:#9356DC;
+
+$color-white:#ffffff;
+$color-grey-dark-light :#35353560;
+$color-grey-light:#eaeaea;
+$color-grey-dark-dark :#242A35;
+
+/* $primary:#9356DC;
 $secondary:#FF79DA;
 $tertiary:#99E2D0;
-$color-white:#ffffff;
 $color-background: #f9fafa;
-$color-grey-light:#eaeaea;
 $color-font:#f6f6f6;
 $color-grey-dark: #353535;
-$color-grey-dark-light :#35353560;
-$color-grey-dark-dark :#242A35;
-$color-white-opacity :#ffffff50;
+$color-white-opacity :#ffffff50; */
 
 /*--font--*/
 $font-exsm: 1.5rem;
