--- a/sass/layouts/_cards.scss
+++ b/sass/layouts/_cards.scss
@@ -2,10 +2,13 @@ $width: 350px;
 
 .container-cards {
   position: relative;
-  width: 350px;
+  width: 90%;//350px
   height: calc-gold-nb($width);
+  padding-bottom: 20px;
  //height: 500px;
- 
+ @include mobile-landscape{
+width :350px;
+}
 }
 .cards-header {
  
@@ -17,7 +20,7 @@ $width: 350px;
   border : 1px solid black;
 }
 .cards-img {
-   object-fit: cover;
+   object-fit:cover;
    object-position: center;
   width: 100%;
   height: 100%;
