--- a/sass/layouts/_cards.scss
+++ b/sass/layouts/_cards.scss
@@ -2,49 +2,50 @@ $width: 350px;
 
 .container-cards {
   position: relative;
-  width: 90%;//350px
+  width: $width;
   height: calc-gold-nb($width);
   padding-bottom: 20px;
- //height: 500px;
- @include mobile-landscape{
-width :350px;
-}
+  @include mobile-landscape {
+    width: 100%;
+    height: calc-gold-minus(90vw);
+  }
+  @include tablette {
+    width: $width;
+    height: calc-gold-nb($width);
+  }
 }
 .cards-header {
- 
-// width: 100%;
- //height: $width;
- width:100%;
- height : 100%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  border : 1px solid black;
+  border: 1px solid black;
 }
 .cards-img {
-   object-fit:cover;
-   object-position: center;
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 100%;
 }
 
 .cards-bottom {
- /*  position: absolute;
+  /*  position: absolute;
   top:50%; */
   width: 100%;
-  display :flex;
+  display: flex;
   justify-content: center;
 
-  p{
+  p {
     font-family: $font-oblique;
     font-size: $font-mdbig;
     position: absolute;
-    top:40%;
-   // text-align :center;
-    color:white;
+    top: 40%;
+    // text-align :center;
+    color: white;
   }
-  .link-pos{
+  .link-pos {
     position: absolute;
-    top:70%;
+    top: 70%;
   }
-//  height: calc-gold-nb($width) - $width;
- // border : 1px solid black;
+  //  height: calc-gold-nb($width) - $width;
+  // border : 1px solid black;
 }
