--- a/sass/pages/_page-commencer.scss
+++ b/sass/pages/_page-commencer.scss
@@ -28,7 +28,8 @@ body {
      justify-content:center;
      width: 100%;
      height : 700px;
-     background-image:url(../pictures/dublin-2344423_1920.jpg);
+    // background-image:url(../pictures/dublin-2344423_1920.jpg);
+     background-image:url(../pictures/libray.jpg);
      @include parallax;
  }
  .header-template{
