toogle line from menu performed

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,7 +10,7 @@
 */
 
 .container-entete {
-  display :block;
+  display: block;
   z-index: 5;
   position: fixed;
   width: 100vw;
@@ -19,8 +19,8 @@
   background-color: $color-grey-dark-light;
   transition: transform 0.4s;
 }
-.container-entete[data-visible ="false"]{
-  transform :translateY(-70px);
+.container-entete[data-visible="false"] {
+  transform: translateY(-70px);
 }
 .content-entete {
   display: flex;
@@ -64,12 +64,97 @@
 }
 
 .entete-right {
-  @extend %entete;
-  justify-content: flex-end;
-  & > ul {
-    & > li {
-      display: inline;
-      padding: 0 30px;
+  display: none;
+  @include tablette {
+    display: flex;
+    align-items: center;
+    width: 42%;
+    height: 100%;
+    justify-content: flex-end;
+    & > ul {
+      & > li {
+        display: inline;
+        padding: 0 30px;
+      }
     }
   }
+}
+.entete-right__mobile {
+  @extend %entete;
+  justify-content: flex-end;
+  @include tablette {
+    display: none;
+  }
+}
+
+#nav-icon {
+  width: 40px;
+  height: 30px;
+  position: relative;
+  margin: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+#nav-icon span {
+  display: block;
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: $color-white;
+  border-radius: 5px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+#nav-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon span:nth-child(2),
+#nav-icon span:nth-child(3) {
+  top: 12px;
+}
+
+#nav-icon span:nth-child(4) {
+  top: 24px;
+}
+
+#nav-icon[data-open="true"] span:nth-child(1) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon[data-open="true"] span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon[data-open="true"] span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon[data-open="true"] span:nth-child(4) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
 }
