--- a/sass/pages/_page-home.scss
+++ b/sass/pages/_page-home.scss
@@ -22,9 +22,12 @@
   width: 100%;
   height: 100vh;
   background-image: url(../pictures/arch.jpg);
+  background-size:contain;
+  background-repeat: no-repeat;
   @include parallax;
   @include tablette {
     height: 700px;
+  
   }
 }
 .header-template {
