--- a/sass/pages/_page-home.scss
+++ b/sass/pages/_page-home.scss
@@ -15,7 +15,7 @@
   // scroll-behavior: smooth;
 }
 
-.main-header {
+/* .main-header {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +29,37 @@
     height: 700px;
   
   }
+} */
+.main-header {
+ // display: block;
+   display: flex;
+    flex-direction: column;
+    justify-content: center;
+  position: relative;
+  
+  @include parallax;
+  @include tablette {
+    height: 700px;
+  
+  }
+  &::before{
+    content: '';
+    position: fixed;
+    top:0;
+    left:0;
+   
+    width: 100%;
+    height: 100vh;
+    background: url(../pictures/arch.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    will-change: transform;
+    z-index: -1;
+
+  }
 }
+
+
 .header-template {
   color: white;
   align-self: center;
