--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -16,6 +16,7 @@ $color-white:#ffffff;
 $color-grey-dark-light :#35353560;
 $color-grey-light:#eaeaea;
 $color-grey-dark-dark :#242A35;
+$color-grey70:#35353599;
 
 /* $primary:#9356DC;
 $secondary:#FF79DA;
