--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -42,7 +42,7 @@ $heigthRow1: 65px;
   height: 100%;
   transform: translateX(200px);
   width: 200px;
-  background-color: grey;
+//  background-color: grey;
   @include mobile-landscape {
     grid-column: 1/2;
     grid-row: 1;
