--- a/sass/pages/_page-home.scss
+++ b/sass/pages/_page-home.scss
@@ -12,6 +12,7 @@
 .main-container {
   width: 100%;
   height: auto;
+  //overflow:hidden;
   // scroll-behavior: smooth;
 }
 
@@ -31,31 +32,28 @@
   }
 } */
 .main-header {
- // display: block;
    display: flex;
     flex-direction: column;
     justify-content: center;
   position: relative;
-  
-  @include parallax;
+ height:85vh;
+
   @include tablette {
     height: 700px;
-  
   }
   &::before{
     content: '';
-    position: fixed;
+    position:fixed;
     top:0;
     left:0;
-   
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: url(../pictures/arch.jpg);
     background-size:cover;
     background-repeat: no-repeat;
-    will-change: transform;
+    background-position: center;
+   // will-change: transform;
     z-index: -1;
-
   }
 }
 
@@ -67,13 +65,25 @@
 .main-header__title {
   width: auto;
   font-style: italic;
+  font-size :$font-mdbig;
+  font-weight: 300;
+  text-align: center;
   @extend .header-template;
+  @include tablette{
+    font-size:$font-exbig;
+  }
 }
 
 .main-header__text {
-  width: 50%;
+ // width: 0%;
+  font-size:$font-lg;
+  font-weight: 500;
   @extend .header-template;
+  @include tablette{
+    font-size:$font-exlg;
+  }
 }
+
 
 .main-center {
   width: 100%;
@@ -112,11 +122,11 @@ width: 30%;
   width: 100%;
   height: auto;
   
-  padding: 0 5%;
+  padding: 0 5% 40px 5%;
   background-color: $color-grey-light;
     @include tablette{
         justify-content:space-around;
-        padding:0 4%;
+        padding:0 4% 40px 4%;
     }
 }
 .main-bottom {
@@ -124,16 +134,23 @@ width: 30%;
   justify-content: center;
   align-items: center;
   padding-top: 70px;
+  width:100%;
   height: 450px;
   background-image: url(../pictures/museum.jpg);
-  @include parallax;
+  background-size:cover;
+  background-repeat: no-repeat;
+background-attachment: unset;
+ background-position: center;
+ @include tablette {
+  background-attachment: fixed;
+}
+ 
   &-content {
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(2, auto);
     width: 95%;
   }
-
   &__title {
     grid-column: 1 / span 2;
     grid-row: 1;
