--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -17,6 +17,7 @@ $color-grey-dark-light :#35353560;
 $color-grey-light:#eaeaea;
 $color-grey-dark-dark :#242A35;
 $color-grey70:#35353599;
+$color-grey-dark50 :#242A35E1;
 
 /* $primary:#9356DC;
 $secondary:#FF79DA;
