--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -42,7 +42,7 @@ $heigthRow1: 65px;
   height: 100%;
   transform: translateX(200px);
   width: 200px;
-//  background-color: grey;
+  background-color:$color-grey-dark50;
   @include mobile-landscape {
     grid-column: 1/2;
     grid-row: 1;
@@ -159,6 +159,7 @@ $heigthRow1: 65px;
   height: 30px;
   position: relative;
   margin: 0;
+
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
