--- a/sass/pages/_page-home.scss
+++ b/sass/pages/_page-home.scss
@@ -12,51 +12,34 @@
 .main-container {
   width: 100%;
   height: auto;
-  //overflow:hidden;
   // scroll-behavior: smooth;
 }
 
-/* .main-header {
+.main-header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
-  height: 100vh;
-  background-image: url(../pictures/arch.jpg);
-  background-size:contain;
-  background-repeat: no-repeat;
-  @include parallax;
-  @include tablette {
-    height: 700px;
-  
-  }
-} */
-.main-header {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
   position: relative;
- height:85vh;
+  height: 85vh;
 
   @include tablette {
     height: 700px;
   }
-  &::before{
-    content: '';
-    position:fixed;
-    top:0;
-    left:0;
+  &::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: url(../pictures/arch.jpg);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-   // will-change: transform;
+    // will-change: transform;
     z-index: -1;
   }
 }
-
 
 .header-template {
   color: white;
@@ -65,33 +48,31 @@
 .main-header__title {
   width: auto;
   font-style: italic;
-  font-size :$font-mdbig;
+  font-size: $font-mdbig;
   font-weight: 300;
   text-align: center;
   @extend .header-template;
-  @include tablette{
-    font-size:$font-exbig;
+  @include tablette {
+    font-size: $font-exbig;
   }
 }
 
 .main-header__text {
- // width: 0%;
-  font-size:$font-lg;
+  // width: 0%;
+  font-size: $font-lg;
   font-weight: 500;
   @extend .header-template;
-  @include tablette{
-    font-size:$font-exlg;
+  @include tablette {
+    font-size: $font-exlg;
   }
 }
-
 
 .main-center {
   width: 100%;
   height: auto;
- // padding: 0;
   padding: 0 5%;
   @include tablette {
-    padding: 0 4% ;
+    padding: 0 4%;
   }
 
   background-color: $color-grey-light;
@@ -104,12 +85,11 @@
   padding: 40px 0 10px 0;
 }
 .main-center__header-border {
-width: 30%;
+  width: 30%;
   height: 2px;
   border-bottom: 1px solid black;
 }
 .main-center__header-title {
- // padding: 0 20px;
   font-style: italic;
   font-size: $font-mdbig;
   font-family: $font-oblique;
@@ -121,35 +101,37 @@ width: 30%;
   justify-content: space-around;
   width: 100%;
   height: auto;
-  
   padding: 0 5% 40px 5%;
   background-color: $color-grey-light;
-    @include tablette{
-        justify-content:space-around;
-        padding:0 4% 40px 4%;
-    }
+  @include tablette {
+    justify-content: space-around;
+    padding: 0 4% 40px 4%;
+  }
 }
 .main-bottom {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   padding-top: 70px;
-  width:100%;
+  padding-bottom: 60px;
+  width: 100%;
   height: 450px;
   background-image: url(../pictures/museum.jpg);
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
-background-attachment: unset;
- background-position: center;
- @include tablette {
-  background-attachment: fixed;
-}
- 
+  background-attachment: unset;
+  background-position: center;
+  @include tablette {
+    background-attachment: fixed;
+  }
+
   &-content {
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(2, auto);
     width: 95%;
+    height: 50%;
+    // background-color:yellow;
   }
   &__title {
     grid-column: 1 / span 2;
@@ -166,12 +148,46 @@ background-attachment: unset;
 }
 
 .main-bottom-bottom {
+  display: grid;
+  grid-template-rows: (50%, 50%);
   height: 300px;
   background-color: $color-grey-dark-dark;
+  /*  justify-content: center; */
+  /* align-items: center; */
+  /* color: $color-white;
+  text-align:center; */
+
+  &__title {
+    grid-row: 1;
+    justify-self: center;
+    align-self: center;
+    /*  padding-top:50px; */
+    font-style: italic;
+    font-size: $font-exlg;
+    color: $color-white;
+  }
+  &__button {
+    grid-row: 2;
+    width: 180px;
+    height: 45px;
+    font-size: $font-exlg;
+    background-color: yellow;
+    justify-self: center;
+    background-color: $color-white;
+    color: black;
+    text-align: center;
+    line-height: 43px;
+    color: black;
+    border: 1.3px solid $color-white;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 22px;
+    box-shadow: 3px 3px 2px $color-white;
+  }
 }
 
-.divcanvas {
+/* .divcanvas {
   width: 100%;
   height: 100%;
   background-image: url(../../dist/pictures/mapmonde/stars.jpg);
-}
+} */
