--- a/sass/pages/_page-tour-du-monde.scss
+++ b/sass/pages/_page-tour-du-monde.scss
@@ -36,7 +36,7 @@ div{
  
 }
 
-.header-template{
+/* .header-template{
     color: white;
     align-self: center;
 }
@@ -54,4 +54,33 @@ div{
 .main-header__btn{
     width:80px;
     @extend .header-template;
+} */
+
+.main-center{}
+.main-center__header{}
+/* .main-center__header-border{} */
+.main-center__header-title{
+    text-align: center;
 }
+
+.main-bottom-container{
+    width :100%;
+    height :600px;
+   
+}
+.main-bottom-content{
+    width:95%;
+    height:100%;
+    margin-left:auto;
+    margin-right:auto;
+    background-color:grey;
+}
+.vignette-awwward{
+    width:90%;
+    height :100px;
+    background-color:yellow;
+    margin-left:auto;
+    margin-right: auto;
+
+}
+
